--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,25 +1,36 @@
 @import "bootstrap";
 
 body {
-	background-color: #222427;
+	background-color: #1f1f20;
 }
 .main-body {
-color: rgb(194, 190, 190);
+color: #b7cbd9;
 	min-height: 100vh;
+	border-radius: 5px;
+	// background: #100e17;
+	// box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+	// margin: 7px;
 }
 
-.main-body h4 {
+.main-body h2 {
 	text-align: center;
-	color: rgb(184, 179, 179);
+	color: #58a6ff;
+	margin: 8px;
 }
 
 .main-card{
+	padding: 20px;
+	border-radius: 5px;
+	background: #100e17;
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+	margin: 7px;
 
 }
 .search-part{
 	margin-top: 15px;
-	border: solid 1px rgb(68, 68, 67);
-
+	border: solid 1px rgb(39, 39, 39);
+	border-radius: 5px;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 
@@ -30,7 +41,7 @@ width: 100%;
 	margin: 3px;
 }
 
-.custom-select {
+.custom-text {
 	background-color: #292727;
 	color: #d97b16;
 	border-radius: 20px;
@@ -38,14 +49,19 @@ width: 100%;
 	border-color: #5c0f0f;
 	width: 100%;
 }
-.custom-select:focus {
+.custom-text:focus {
 	border-color: #5c0f0f;
 	outline: 0;
-	color: #d97b16;
+	color: #e9e9e9;
 	box-shadow: none;
+	background-color: rgb(85, 83, 83);
 	/* box-shadow: 0 0 0 0.2rem rgba(207, 23, 23, 0.25); */
 }
+.form-group {
 
+	width: 100%;
+	padding: 3px;
+}
 
 .form-label{
 display: flex;
@@ -61,4 +77,102 @@ margin: 0;
 	display: flex;
 	justify-content: center;
 	padding-top: 8px;
+}
+
+
+
+.page-link, .page-item:first-child .page-link ,.page-item:last-child .page-link{
+	width: 40px;
+	display: flex;
+	height: 40px;
+	color: #bf8c4f;
+	background-color: #262727;
+	line-height: 40px;
+	border-radius: 100%;
+	padding: 0;
+	position: relative;
+	justify-content: center;
+	align-items: center;
+	border: 3px solid #2ecc71;
+
+}
+.page-link:hover {
+	z-index: 2;
+	color: #cdd6e0;
+	text-decoration: none;
+	background-color: #343a40;
+	border: 3px solid #2ecc71;
+}
+
+.card-box{
+	background-color: #222121;
+	// border: 1px solid rgb(66, 62, 62);
+	padding: 20px;
+	margin-bottom: 20px;
+	width: 100%;
+	border-radius: 5px;
+	box-shadow: 5px 5px 10px rgba(27, 27, 27, 0.5);
+}
+
+.card-box>a{
+	color: inherit;
+
+}
+
+.card-box>a:hover{
+	text-decoration: none;
+
+}
+
+.company-detail{
+	// border: 1px solid white;
+	width: 100%;
+	text-align: center;
+	border-bottom: 1px solid #696565;
+	margin-bottom: 3px;
+}
+
+.company-detail img{
+	height: 98px;
+	width: 98px;
+}
+
+.job-description{
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+.job-description ul {
+	display: flex;
+padding: 0;
+}
+
+.job-description ul li{
+	display: flex;
+	// flex-direction: column;
+	// align-items: center;
+	margin: 6px;
+}
+
+.badge-time svg, .badge-location svg{
+font-size: 20px;
+}
+
+
+
+.view-btn{
+	display: inline-block;
+	background: #044902;;
+	padding: 0.45em 1em;
+	width: 100%;
+	text-align: center;
+	border-radius: 5px;
+	color: #fff;
+	font-weight: 500;
+	letter-spacing: 0.2px;
+	font-size: 17px;
+}
+.view-btn:hover{
+	background: #097205;;
 }
