--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@ body {
 	background-color: #1f1f20;
 }
 .main-body {
-color: #b7cbd9;
+	color: #b7cbd9;
 	min-height: 100vh;
 	border-radius: 5px;
 	// background: #100e17;
@@ -16,28 +16,27 @@ color: #b7cbd9;
 	text-align: center;
 	color: #58a6ff;
 	margin: 8px;
+	display: none;
 }
 
-.main-card{
+.main-card {
 	padding: 20px;
 	border-radius: 5px;
 	background: #100e17;
 	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 	margin: 7px;
-
 }
-.search-part{
+.search-part {
 	margin-top: 15px;
 	border: solid 1px rgb(39, 39, 39);
 	border-radius: 5px;
 	width: 100%;
 	display: none;
 	justify-content: center;
-
 }
 
-.search-part form{
-width: 100%;
+.search-part form {
+	width: 100%;
 	margin: 3px;
 }
 
@@ -58,30 +57,29 @@ width: 100%;
 	/* box-shadow: 0 0 0 0.2rem rgba(207, 23, 23, 0.25); */
 }
 .form-group {
-
 	width: 100%;
 	padding: 3px;
 }
 
-.form-label{
-display: flex;
-justify-content: center;
-margin: 0;
+.form-label {
+	display: flex;
+	justify-content: center;
+	margin: 0;
 }
 
-:global(.form-group){
+:global(.form-group) {
 	margin-bottom: 0;
 }
 
-.pagination-part{
+.pagination-part {
 	display: flex;
 	justify-content: center;
 	padding-top: 8px;
 }
 
-
-
-.page-link, .page-item:first-child .page-link ,.page-item:last-child .page-link{
+.page-link,
+.page-item:first-child .page-link,
+.page-item:last-child .page-link {
 	width: 40px;
 	display: flex;
 	height: 40px;
@@ -94,7 +92,6 @@ margin: 0;
 	justify-content: center;
 	align-items: center;
 	border: 3px solid #2ecc71;
-
 }
 .page-link:hover {
 	z-index: 2;
@@ -104,7 +101,7 @@ margin: 0;
 	border: 3px solid #2ecc71;
 }
 
-.card-box{
+.card-box {
 	background-color: #222121;
 	// border: 1px solid rgb(66, 62, 62);
 	padding: 20px;
@@ -114,17 +111,15 @@ margin: 0;
 	box-shadow: 5px 5px 10px rgba(27, 27, 27, 0.5);
 }
 
-.card-box>a{
+.card-box > a {
 	color: inherit;
-
 }
 
-.card-box>a:hover{
+.card-box > a:hover {
 	text-decoration: none;
-
 }
 
-.company-detail{
+.company-detail {
 	// border: 1px solid white;
 	width: 100%;
 	text-align: center;
@@ -132,12 +127,12 @@ margin: 0;
 	margin-bottom: 3px;
 }
 
-.company-detail img{
+.company-detail img {
 	height: 98px;
 	width: 98px;
 }
 
-.job-description{
+.job-description {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -145,25 +140,24 @@ margin: 0;
 
 .job-description ul {
 	display: flex;
-padding: 0;
+	padding: 0;
 }
 
-.job-description ul li{
+.job-description ul li {
 	display: flex;
 	// flex-direction: column;
 	// align-items: center;
 	margin: 6px;
 }
 
-.badge-time svg, .badge-location svg{
-font-size: 20px;
+.badge-time svg,
+.badge-location svg {
+	font-size: 20px;
 }
 
-
-
-.view-btn{
+.view-btn {
 	display: inline-block;
-	background: #044902;;
+	background: #044902;
 	padding: 0.45em 1em;
 	width: 100%;
 	text-align: center;
@@ -173,32 +167,36 @@ font-size: 20px;
 	letter-spacing: 0.2px;
 	font-size: 17px;
 }
-.view-btn:hover{
-	background: #097205;;
+.view-btn:hover {
+	background: #097205;
 }
-
-
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-
-
-	}
-
-
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px)
-{
-
-.search-part{
-	display: flex;
 }
 
- }
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+	.search-part {
+		display: flex;
+		flex-direction: column;
+	}
+	.main-body h2 {
+		text-align: center;
+		color: #58a6ff;
+		margin: 8px;
+		display: block;
+	}
+}
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {  }
+@media (min-width: 992px) {
+	.search-part {
+		display: flex;
+		flex-direction: row;
+	}
+}
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {  }
+@media (min-width: 1200px) {
+}
