--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -171,6 +171,20 @@ body {
 	background: #097205;
 }
 
+
+#overlay{
+	position: fixed;
+	z-index: 5;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: rgb(27, 37, 12);
+	cursor: pointer;
+
+}
+
+
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
 }
