--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -179,8 +179,8 @@ body {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-color: rgb(27, 37, 12);
-	cursor: pointer;
+	// background-color: rgb(27, 37, 12);
+	// cursor: pointer;
 
 }
 
