--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -110,6 +110,16 @@ body {
 	border: 3px solid #2ecc71;
 }
 
+// mobile search
+.mobile-search{
+	display: flex;
+	// border: 3px solid #e00a99;
+	justify-content: flex-end;
+}
+.mobile-search .btn{
+	border-radius: 50%;
+}
+
 .card-box {
 	background-color: #222121;
 	// border: 1px solid rgb(66, 62, 62);
