working side pane here

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,7 +31,7 @@ body {
 	border: solid 1px rgb(39, 39, 39);
 	border-radius: 5px;
 	width: 100%;
-	display: none;
+	// display: none;
 	justify-content: center;
 }
 
