--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,9 +7,6 @@ body {
 	color: #b7cbd9;
 	min-height: 100vh;
 	border-radius: 5px;
-	// background: #100e17;
-	// box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-	// margin: 7px;
 }
 
 .main-body h2 {
@@ -17,6 +14,16 @@ body {
 	color: #58a6ff;
 	margin: 8px;
 	display: none;
+
+	@media (min-width: 768px) {
+
+
+			text-align: center;
+			color: #58a6ff;
+			margin: 8px;
+			display: block;
+
+	}
 }
 
 .main-card {
@@ -26,18 +33,21 @@ body {
 	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 	margin: 7px;
 }
-.search-part {
+.search-form {
 	margin-top: 15px;
 	border: solid 1px rgb(39, 39, 39);
 	border-radius: 5px;
 	width: 100%;
 	display: none;
 	justify-content: center;
-}
 
-.search-part form {
-	width: 100%;
-	margin: 3px;
+	@media (min-width: 768px) {
+					display: flex;
+			flex-direction: column;
+
+	}
+
+
 }
 
 .custom-text {
@@ -47,15 +57,16 @@ body {
 	padding: 6px 20px;
 	border-color: #5c0f0f;
 	width: 100%;
+	&:focus {
+		border-color: #5c0f0f;
+		outline: 0;
+		color: #e9e9e9;
+		box-shadow: none;
+		background-color: rgb(85, 83, 83);
+		/* box-shadow: 0 0 0 0.2rem rgba(207, 23, 23, 0.25); */
+	}
 }
-.custom-text:focus {
-	border-color: #5c0f0f;
-	outline: 0;
-	color: #e9e9e9;
-	box-shadow: none;
-	background-color: rgb(85, 83, 83);
-	/* box-shadow: 0 0 0 0.2rem rgba(207, 23, 23, 0.25); */
-}
+
 .form-group {
 	width: 100%;
 	padding: 3px;
@@ -92,13 +103,13 @@ body {
 	justify-content: center;
 	align-items: center;
 	border: 3px solid #2ecc71;
-}
-.page-link:hover {
-	z-index: 2;
-	color: #cdd6e0;
-	text-decoration: none;
-	background-color: #343a40;
-	border: 3px solid #2ecc71;
+	&:hover {
+		z-index: 2;
+		color: #cdd6e0;
+		text-decoration: none;
+		background-color: #343a40;
+		border: 3px solid #2ecc71;
+	}
 }
 
 .card-box {
@@ -113,10 +124,9 @@ body {
 
 .card-box > a {
 	color: inherit;
-}
-
-.card-box > a:hover {
-	text-decoration: none;
+	&:hover {
+		text-decoration: none;
+	}
 }
 
 .company-detail {
@@ -136,18 +146,17 @@ body {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-}
 
-.job-description ul {
+ul {
 	display: flex;
 	padding: 0;
 }
 
-.job-description ul li {
+li {
 	display: flex;
-	// flex-direction: column;
-	// align-items: center;
 	margin: 6px;
+}
+
 }
 
 .badge-time svg,
@@ -166,18 +175,17 @@ body {
 	font-weight: 500;
 	letter-spacing: 0.2px;
 	font-size: 17px;
+	&:hover {
+		background: #097205;
+	}
 }
-.view-btn:hover {
-	background: #097205;
-}
-
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-	.search-part {
+	.search-form {
 		display: flex;
 		flex-direction: column;
 	}
@@ -191,7 +199,7 @@ body {
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-	.search-part {
+	.search-form {
 		display: flex;
 		flex-direction: row;
 	}
