--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,9 +7,6 @@ body {
 	color: #b7cbd9;
 	min-height: 100vh;
 	border-radius: 5px;
-	// background: #100e17;
-	// box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-	// margin: 7px;
 }
 
 .main-body h2 {
@@ -31,8 +28,16 @@ body {
 	border: solid 1px rgb(39, 39, 39);
 	border-radius: 5px;
 	width: 100%;
-	// display: none;
 	justify-content: center;
+	@media (min-width: 768px) {
+		display: flex;
+		flex-direction: column;
+	}
+
+	@media (min-width: 992px) {
+		display: flex;
+		flex-direction: row;
+	}
 }
 
 // custom select
@@ -49,14 +54,14 @@ body {
 	padding: 6px 20px;
 	border-color: #5c0f0f;
 	width: 100%;
-}
-.custom-checkbox:focus {
-	border-color: #5c0f0f;
-	outline: 0;
-	color: #e9e9e9;
-	box-shadow: none;
-	background-color: rgb(85, 83, 83);
-	/* box-shadow: 0 0 0 0.2rem rgba(207, 23, 23, 0.25); */
+	&:focus {
+		border-color: #5c0f0f;
+		outline: 0;
+		color: #e9e9e9;
+		box-shadow: none;
+		background-color: rgb(85, 83, 83);
+		/* box-shadow: 0 0 0 0.2rem rgba(207, 23, 23, 0.25); */
+	}
 }
 .form-group {
 	width: 100%;
@@ -94,13 +99,13 @@ body {
 	justify-content: center;
 	align-items: center;
 	border: 3px solid #2ecc71;
-}
-.page-link:hover {
-	z-index: 2;
-	color: #cdd6e0;
-	text-decoration: none;
-	background-color: #343a40;
-	border: 3px solid #2ecc71;
+	&:hover {
+		z-index: 2;
+		color: #cdd6e0;
+		text-decoration: none;
+		background-color: #343a40;
+		border: 3px solid #2ecc71;
+	}
 }
 
 // mobile search
@@ -125,10 +130,9 @@ body {
 
 .card-box > a {
 	color: inherit;
-}
-
-.card-box > a:hover {
-	text-decoration: none;
+	&:hover {
+		text-decoration: none;
+	}
 }
 
 .company-detail {
@@ -153,16 +157,13 @@ body {
 .job-description ul {
 	display: flex;
 	padding: 0;
+	li {
+		display: flex;
+		margin: 6px;
+	}
 }
 
-.job-description ul li {
-	display: flex;
-	// flex-direction: column;
-	// align-items: center;
-	margin: 6px;
-}
-
-.badge-time svg,
+.job-description ul .badge-time svg,
 .badge-location svg {
 	font-size: 20px;
 }
@@ -178,9 +179,9 @@ body {
 	font-weight: 500;
 	letter-spacing: 0.2px;
 	font-size: 17px;
-}
-.view-btn:hover {
-	background: #097205;
+	&:hover {
+		background: #097205;
+	}
 }
 
 .form-wrapper {
@@ -198,34 +199,4 @@ body {
 			transform: translateX(0);
 		}
 	}
-}
-
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-	.search-form {
-		display: flex;
-		flex-direction: column;
-	}
-	.main-body h2 {
-		text-align: center;
-		color: #58a6ff;
-		margin: 8px;
-		display: block;
-	}
-}
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-	.search-form {
-		display: flex;
-		flex-direction: row;
-	}
-}
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
 }
