--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,6 +23,27 @@
 	border: 3px solid #2ecc71;
 }
 
-.mobile-search .btn{
-	border-radius: 50%;
+// shity trials menu
+.nav-menu {
+	background-color: #19191a;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	position: fixed;
+	top: 0;
+	left: -100%;
+	transition: 850ms;
+	color: rgb(226, 235, 226);
+	margin-top: 60px;
+	z-index: 9999999;
+	&.active {
+		left: 0;
+		transition: 350ms;
+	}
+}
+
+.nav-menu-items {
+	width: 100%;
+	padding-left: 0;
 }
