--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,7 +25,7 @@
 
 // shity trials menu
 .nav-menu {
-	background-color: #19191a;
+	// background-color: #19191a;
 	width: 100%;
 	height: 100vh;
 	display: flex;
@@ -35,8 +35,10 @@
 	left: -100%;
 	transition: 850ms;
 	color: rgb(226, 235, 226);
-	margin-top: 60px;
-	z-index: 9999999;
+	margin-top: 55px;
+  background-color: rgba(21, 30, 39, 1);
+	box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5), 0px 2px 2px 0px rgba(12, 12, 12, 0.5);
+	z-index: 1001;
 	&.active {
 		left: 0;
 		transition: 350ms;
