--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,108 +1,4 @@
 @import "bootstrap";
-
-body {
-	background-color: #1f1f20;
-}
-.main-body {
-	color: #b7cbd9;
-	min-height: 100vh;
-	border-radius: 5px;
-}
-
-.main-body h2 {
-	text-align: center;
-	color: #58a6ff;
-	margin: 8px;
-	display: none;
-
-	@media (min-width: 768px) {
-
-
-			text-align: center;
-			color: #58a6ff;
-			margin: 8px;
-			display: block;
-
-	}
-}
-
-.main-card {
-	padding: 20px;
-	border-radius: 5px;
-	background: #100e17;
-	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-	margin: 7px;
-}
-.search-form {
-	margin-top: 15px;
-	border: solid 1px rgb(39, 39, 39);
-	border-radius: 5px;
-	width: 100%;
-	display: none;
-	justify-content: center;
-
-	@media (min-width: 768px) {
-					display: flex;
-			flex-direction: column;
-
-	}
-
-
-}
-
-.custom-text {
-	background-color: #292727;
-	color: #d97b16;
-	border-radius: 20px;
-	padding: 6px 20px;
-	border-color: #5c0f0f;
-	width: 100%;
-	&:focus {
-		border-color: #5c0f0f;
-		outline: 0;
-		color: #e9e9e9;
-		box-shadow: none;
-		background-color: rgb(85, 83, 83);
-		/* box-shadow: 0 0 0 0.2rem rgba(207, 23, 23, 0.25); */
-	}
-}
-
-.form-group {
-	width: 100%;
-	padding: 3px;
-}
-
-.form-label {
-	display: flex;
-	justify-content: center;
-	margin: 0;
-}
-
-:global(.form-group) {
-	margin-bottom: 0;
-}
-
-
-// mobile search
-.mobile-search{
-	display: flex;
-	// border: 3px solid #e00a99;
-	justify-content: flex-end;
-
-.btn{
-	border-radius: 50%;
-}
-
-
-
-}
-
-.pagination-part {
-	display: flex;
-	justify-content: center;
-	padding-top: 8px;
-}
-
 .page-link,
 .page-item:first-child .page-link,
 .page-item:last-child .page-link {
@@ -118,104 +14,11 @@ body {
 	justify-content: center;
 	align-items: center;
 	border: 3px solid #2ecc71;
-	&:hover {
-		z-index: 2;
-		color: #cdd6e0;
-		text-decoration: none;
-		background-color: #343a40;
-		border: 3px solid #2ecc71;
-	}
 }
-
-.card-box {
-	background-color: #222121;
-	// border: 1px solid rgb(66, 62, 62);
-	padding: 20px;
-	margin-bottom: 20px;
-	width: 100%;
-	border-radius: 5px;
-	box-shadow: 5px 5px 10px rgba(27, 27, 27, 0.5);
-}
-
-.card-box > a {
-	color: inherit;
-	&:hover {
-		text-decoration: none;
-	}
-}
-
-.company-detail {
-	// border: 1px solid white;
-	width: 100%;
-	text-align: center;
-	border-bottom: 1px solid #696565;
-	margin-bottom: 3px;
-}
-
-.company-detail img {
-	height: 98px;
-	width: 98px;
-}
-
-.job-description {
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-
-ul {
-	display: flex;
-	padding: 0;
-}
-
-li {
-	display: flex;
-	margin: 6px;
-}
-
-}
-
-.badge-time svg,
-.badge-location svg {
-	font-size: 20px;
-}
-
-.view-btn {
-	display: inline-block;
-	background: #044902;
-	padding: 0.45em 1em;
-	width: 100%;
-	text-align: center;
-	border-radius: 5px;
-	color: #fff;
-	font-weight: 500;
-	letter-spacing: 0.2px;
-	font-size: 17px;
-	&:hover {
-		background: #097205;
-	}
-}
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-	.search-form {
-		display: flex;
-		flex-direction: column;
-	}
-	.main-body h2 {
-		text-align: center;
-		color: #58a6ff;
-		margin: 8px;
-		display: block;
-	}
-}
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-	.search-form {
-		display: flex;
-		flex-direction: row;
-	}
+.page-link:hover {
+	z-index: 2;
+	color: #cdd6e0;
+	text-decoration: none;
+	background-color: #343a40;
+	border: 3px solid #2ecc71;
 }
