--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,3 +22,30 @@
 	background-color: #343a40;
 	border: 3px solid #2ecc71;
 }
+
+// shity trials menu
+.nav-menu {
+	// background-color: #19191a;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	position: fixed;
+	top: 0;
+	left: -100%;
+	transition: 850ms;
+	color: rgb(226, 235, 226);
+	margin-top: 55px;
+  background-color: rgba(21, 30, 39, 1);
+	box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5), 0px 2px 2px 0px rgba(12, 12, 12, 0.5);
+	z-index: 1001;
+	&.active {
+		left: 0;
+		transition: 350ms;
+	}
+}
+
+.nav-menu-items {
+	width: 100%;
+	padding-left: 0;
+}
